- 로컬 DB 홈서버 주소로 변경 - 회원가입 로직 구성 일부 완료 - Exception 공통 클래스 구축 진행 일부 완료 - 불필요 import 제거 - 어노테이션 길이별 정렬 - .gitignore 일부 수정 - postgreSQL을 MySQL로 변경 - 로그인, 회원가입 디렉토리 위치 변경 - 불필요 JavaDOC 제거 - Validation 도입 진행